[gd_scene load_steps=26 format=3 uid="uid://db613si4d4tlm"]

[ext_resource type="Theme" uid="uid://dudllgb3bto64" path="res://gui/theme_ui.tres" id="1_4gjtd"]
[ext_resource type="Script" path="res://scenes/main_palette.gd" id="1_g3ib3"]
[ext_resource type="Texture2D" uid="uid://dongu1ug4bqey" path="res://icon.svg" id="1_n6mad"]
[ext_resource type="Script" path="res://scenes/main.gd" id="2_vvdwm"]
[ext_resource type="Script" path="res://scenes/main_canvas.gd" id="2_yfur3"]
[ext_resource type="Texture2D" uid="uid://dijemrget8tma" path="res://assets/material-icons/edit_off_FILL0_wght400_GRAD0_opsz48.svg" id="4_30kln"]
[ext_resource type="Script" path="res://scenes/main_sheet.gd" id="4_ma5rl"]
[ext_resource type="PackedScene" uid="uid://qicprawvvqr" path="res://gui/partial_flowsheet_link.tscn" id="5_34c81"]
[ext_resource type="Texture2D" uid="uid://bv0nr7u7yg5bg" path="res://assets/material-icons/content_copy_FILL0_wght400_GRAD0_opsz48.svg" id="5_oynwj"]
[ext_resource type="PackedScene" uid="uid://cwa4px1e60efr" path="res://gui/node_input.tscn" id="5_tddp7"]
[ext_resource type="Texture2D" uid="uid://csxtnxyi1oyuo" path="res://assets/material-icons/delete_FILL0_wght400_GRAD0_opsz48.svg" id="6_ku8fx"]
[ext_resource type="Texture2D" uid="uid://ckkytohbyrjeu" path="res://assets/material-icons/code_FILL0_wght400_GRAD0_opsz48.svg" id="7_4r2xc"]
[ext_resource type="FontFile" uid="uid://xvny3ak52qpq" path="res://assets/fonts/Fira_Code/static/FiraCode-Regular.ttf" id="8_cv6jy"]
[ext_resource type="PackedScene" uid="uid://clcfxaghnd6ow" path="res://gui/popup_edit_formula.tscn" id="10_cvn2p"]
[ext_resource type="Texture2D" uid="uid://dqw4w74eewqqt" path="res://assets/material-icons/123_FILL0_wght400_GRAD0_opsz48.svg" id="12_83fty"]
[ext_resource type="Script" path="res://util/file_dialog.gd" id="16_6mcyh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b6ex8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uci5e"]
draw_center = false
border_color = Color(0, 0, 0, 1)

[sub_resource type="ButtonGroup" id="ButtonGroup_7ybfm"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_8ridv"]
grow_begin = 2.0
grow_end = 2.0
thickness = 2

[sub_resource type="ButtonGroup" id="ButtonGroup_80v26"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mrmkk"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kei3k"]
bg_color = Color(0.878431, 0.878431, 0.878431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w25rn"]
bg_color = Color(0, 0, 0, 0.752941)

[sub_resource type="Theme" id="Theme_lt1x1"]
default_font_size = 12

[node name="Main" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_4gjtd")
script = ExtResource("2_vvdwm")

[node name="PrototypeDesign" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2

[node name="VSeparator" type="VSeparator" parent="MenuBar"]
layout_mode = 2
theme_override_constants/separation = 8
theme_override_styles/separator = SubResource("StyleBoxEmpty_b6ex8")

[node name="File" type="MenuButton" parent="MenuBar"]
layout_mode = 2
text = "File"
switch_on_hover = true
item_count = 7
popup/item_0/text = "New"
popup/item_0/id = 0
popup/item_1/text = "Open"
popup/item_1/id = 1
popup/item_2/text = ""
popup/item_2/id = 2
popup/item_2/separator = true
popup/item_3/text = "Save"
popup/item_3/id = 3
popup/item_4/text = "Save As"
popup/item_4/id = 4
popup/item_5/text = ""
popup/item_5/id = 5
popup/item_5/separator = true
popup/item_6/text = "Exit"
popup/item_6/id = 6

[node name="Edit" type="MenuButton" parent="MenuBar"]
layout_mode = 2
text = "Edit"
switch_on_hover = true
item_count = 2
popup/item_0/text = "Undo"
popup/item_0/id = 0
popup/item_1/text = "Paste"
popup/item_1/id = 1

[node name="View" type="MenuButton" parent="MenuBar"]
layout_mode = 2
text = "View"
switch_on_hover = true
item_count = 7
popup/item_0/text = "Edit"
popup/item_0/id = 0
popup/item_1/text = "Style"
popup/item_1/id = 1
popup/item_2/text = "Test"
popup/item_2/id = 2
popup/item_3/text = ""
popup/item_3/id = 3
popup/item_3/separator = true
popup/item_4/text = "Snap to Grid"
popup/item_4/checkable = 1
popup/item_4/id = 4
popup/item_5/text = "View Grid"
popup/item_5/checkable = 1
popup/item_5/id = 5
popup/item_6/text = "Grid Settings"
popup/item_6/id = 6

[node name="Help" type="MenuButton" parent="MenuBar"]
layout_mode = 2
text = "Help"
switch_on_hover = true
item_count = 1
popup/item_0/text = "About"
popup/item_0/id = 1

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 32.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 160

[node name="Palette" type="Panel" parent="HSplitContainer"]
visible = false
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_uci5e")
script = ExtResource("1_g3ib3")

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/Palette"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="Functionality" type="HFlowContainer" parent="HSplitContainer/Palette/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="HSplitContainer/Palette/VBoxContainer/Functionality"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_7ybfm")
icon = ExtResource("1_n6mad")
expand_icon = true

[node name="Button2" type="Button" parent="HSplitContainer/Palette/VBoxContainer/Functionality"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_7ybfm")
icon = ExtResource("1_n6mad")
expand_icon = true

[node name="Button3" type="Button" parent="HSplitContainer/Palette/VBoxContainer/Functionality"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_7ybfm")
icon = ExtResource("1_n6mad")
expand_icon = true

[node name="Button4" type="Button" parent="HSplitContainer/Palette/VBoxContainer/Functionality"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_7ybfm")
icon = ExtResource("1_n6mad")
expand_icon = true

[node name="Button5" type="Button" parent="HSplitContainer/Palette/VBoxContainer/Functionality"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_7ybfm")
icon = ExtResource("1_n6mad")
expand_icon = true

[node name="Button6" type="Button" parent="HSplitContainer/Palette/VBoxContainer/Functionality"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_7ybfm")
icon = ExtResource("1_n6mad")
expand_icon = true

[node name="HSeparator" type="HSeparator" parent="HSplitContainer/Palette/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
theme_override_styles/separator = SubResource("StyleBoxLine_8ridv")

[node name="Styles" type="HFlowContainer" parent="HSplitContainer/Palette/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="HSplitContainer/Palette/VBoxContainer/Styles"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_80v26")
icon = ExtResource("1_n6mad")
expand_icon = true

[node name="Button2" type="Button" parent="HSplitContainer/Palette/VBoxContainer/Styles"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_80v26")
icon = ExtResource("1_n6mad")
expand_icon = true

[node name="Button3" type="Button" parent="HSplitContainer/Palette/VBoxContainer/Styles"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_80v26")
icon = ExtResource("1_n6mad")
expand_icon = true

[node name="Button4" type="Button" parent="HSplitContainer/Palette/VBoxContainer/Styles"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_80v26")
icon = ExtResource("1_n6mad")
expand_icon = true

[node name="Button5" type="Button" parent="HSplitContainer/Palette/VBoxContainer/Styles"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_80v26")
icon = ExtResource("1_n6mad")
expand_icon = true

[node name="Button6" type="Button" parent="HSplitContainer/Palette/VBoxContainer/Styles"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_80v26")
icon = ExtResource("1_n6mad")
expand_icon = true

[node name="Button7" type="Button" parent="HSplitContainer/Palette/VBoxContainer/Styles"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_80v26")
icon = ExtResource("1_n6mad")
expand_icon = true

[node name="Button8" type="Button" parent="HSplitContainer/Palette/VBoxContainer/Styles"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_80v26")
icon = ExtResource("1_n6mad")
expand_icon = true

[node name="Button9" type="Button" parent="HSplitContainer/Palette/VBoxContainer/Styles"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_80v26")
icon = ExtResource("1_n6mad")
expand_icon = true

[node name="Button10" type="Button" parent="HSplitContainer/Palette/VBoxContainer/Styles"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_80v26")
icon = ExtResource("1_n6mad")
expand_icon = true

[node name="Canvas" type="Panel" parent="HSplitContainer"]
clip_contents = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mrmkk")
script = ExtResource("2_yfur3")

[node name="Sheet" type="Panel" parent="HSplitContainer/Canvas"]
show_behind_parent = true
clip_contents = true
custom_minimum_size = Vector2(640, 480)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -621.0
offset_top = -457.0
offset_right = 659.0
offset_bottom = 503.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kei3k")
script = ExtResource("4_ma5rl")

[node name="Nodes" type="Control" parent="HSplitContainer/Canvas/Sheet"]
anchors_preset = 0
mouse_filter = 1

[node name="Links" type="Control" parent="HSplitContainer/Canvas/Sheet"]
anchors_preset = 0
mouse_filter = 1

[node name="PartialFlowsheetLink" parent="HSplitContainer/Canvas/Sheet" instance=ExtResource("5_34c81")]
layout_mode = 1
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1
mouse_filter = 2

[node name="SheetSizeHandles" type="Control" parent="HSplitContainer/Canvas/Sheet"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Top" type="Button" parent="HSplitContainer/Canvas/Sheet/SheetSizeHandles"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -4.0
offset_right = 4.0
offset_bottom = 8.0
grow_horizontal = 2

[node name="Left" type="Button" parent="HSplitContainer/Canvas/Sheet/SheetSizeHandles"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -4.0
offset_right = 8.0
offset_bottom = 4.0
grow_vertical = 2

[node name="Right" type="Button" parent="HSplitContainer/Canvas/Sheet/SheetSizeHandles"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -4.0
offset_bottom = 4.0
grow_horizontal = 0
grow_vertical = 2

[node name="Buttom" type="Button" parent="HSplitContainer/Canvas/Sheet/SheetSizeHandles"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0

[node name="SelectionInfo" type="Panel" parent="HSplitContainer/Canvas"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = 39.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_w25rn")

[node name="Info" type="HBoxContainer" parent="HSplitContainer/Canvas/SelectionInfo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_right = -8.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_lt1x1")
theme_override_constants/separation = 32

[node name="Label" type="Label" parent="HSplitContainer/Canvas/SelectionInfo/Info"]
layout_mode = 2
text = "Selection:"
vertical_alignment = 1

[node name="Node" type="HBoxContainer" parent="HSplitContainer/Canvas/SelectionInfo/Info"]
visible = false
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="HSplitContainer/Canvas/SelectionInfo/Info/Node"]
layout_mode = 2
text = "Node"
vertical_alignment = 1

[node name="Id" type="Label" parent="HSplitContainer/Canvas/SelectionInfo/Info/Node"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
text = "#1"

[node name="CalculatedValue" type="Label" parent="HSplitContainer/Canvas/SelectionInfo/Info/Node"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
text = "0"

[node name="Actions" type="HBoxContainer" parent="HSplitContainer/Canvas/SelectionInfo/Info/Node"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/separation = 8

[node name="ChangeType" type="OptionButton" parent="HSplitContainer/Canvas/SelectionInfo/Info/Node/Actions"]
layout_mode = 2
item_count = 5
selected = 1
popup/item_0/text = "Switch"
popup/item_0/id = 0
popup/item_1/text = "Integer"
popup/item_1/id = 1
popup/item_2/text = "Decimal"
popup/item_2/id = 2
popup/item_3/text = "Percentage"
popup/item_3/id = 3
popup/item_4/text = "Text"
popup/item_4/id = 4

[node name="InitialValue" parent="HSplitContainer/Canvas/SelectionInfo/Info/Node/Actions" instance=ExtResource("5_tddp7")]
layout_mode = 2

[node name="ToggleEditable" type="Button" parent="HSplitContainer/Canvas/SelectionInfo/Info/Node/Actions"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
toggle_mode = true
icon = ExtResource("4_30kln")
icon_alignment = 1
expand_icon = true

[node name="Duplicate" type="Button" parent="HSplitContainer/Canvas/SelectionInfo/Info/Node/Actions"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
icon = ExtResource("5_oynwj")
expand_icon = true

[node name="Delete" type="Button" parent="HSplitContainer/Canvas/SelectionInfo/Info/Node/Actions"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
icon = ExtResource("6_ku8fx")
expand_icon = true

[node name="Link" type="HBoxContainer" parent="HSplitContainer/Canvas/SelectionInfo/Info"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 32

[node name="Label" type="Label" parent="HSplitContainer/Canvas/SelectionInfo/Info/Link"]
layout_mode = 2
text = "Link"
vertical_alignment = 1

[node name="Id" type="Label" parent="HSplitContainer/Canvas/SelectionInfo/Info/Link"]
layout_mode = 2
text = "#1 -> #2"

[node name="Order" type="Label" parent="HSplitContainer/Canvas/SelectionInfo/Info/Link"]
layout_mode = 2
text = "(0)"

[node name="Formula" type="Label" parent="HSplitContainer/Canvas/SelectionInfo/Info/Link"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_cv6jy")
text = "IN + OUT"

[node name="Actions" type="HBoxContainer" parent="HSplitContainer/Canvas/SelectionInfo/Info/Link"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/separation = 8

[node name="EditFormula" type="Button" parent="HSplitContainer/Canvas/SelectionInfo/Info/Link/Actions"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
icon = ExtResource("7_4r2xc")
expand_icon = true

[node name="Duplicate" type="Button" parent="HSplitContainer/Canvas/SelectionInfo/Info/Link/Actions"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
icon = ExtResource("5_oynwj")
expand_icon = true

[node name="Delete" type="Button" parent="HSplitContainer/Canvas/SelectionInfo/Info/Link/Actions"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
icon = ExtResource("6_ku8fx")
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="HSplitContainer/Canvas/SelectionInfo/Info/Link"]
layout_mode = 2
texture = ExtResource("12_83fty")

[node name="EditFormula" parent="HSplitContainer/Canvas" instance=ExtResource("10_cvn2p")]
visible = false

[node name="EditGrid" type="PopupPanel" parent="."]
title = "Grid Settings"
size = Vector2i(211, 100)
borderless = false
always_on_top = true

[node name="HBoxContainer" type="HBoxContainer" parent="EditGrid"]
offset_left = 4.0
offset_top = 4.0
offset_right = 207.0
offset_bottom = 96.0
size_flags_vertical = 4

[node name="Label" type="Label" parent="EditGrid/HBoxContainer"]
layout_mode = 2
text = "Grid Size"

[node name="GridX" type="SpinBox" parent="EditGrid/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
min_value = 1.0
max_value = 256.0
value = 1.0
rounded = true
allow_greater = true
prefix = "X:"

[node name="GridY" type="SpinBox" parent="EditGrid/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
min_value = 1.0
max_value = 256.0
value = 1.0
rounded = true
allow_greater = true
prefix = "Y:"

[node name="OpenFile" type="FileDialog" parent="."]
title = "Open a File"
size = Vector2i(460, 320)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.flow ; Flowsheet Files")
script = ExtResource("16_6mcyh")

[node name="SaveFile" type="FileDialog" parent="."]
size = Vector2i(460, 320)
ok_button_text = "Save"
access = 2
filters = PackedStringArray("*.flow ; Flowsheet Files")
script = ExtResource("16_6mcyh")

[connection signal="item_selected" from="HSplitContainer/Canvas/Sheet" to="HSplitContainer/Canvas" method="_refresh_selection_info"]
[connection signal="item_selected" from="HSplitContainer/Canvas/SelectionInfo/Info/Node/Actions/ChangeType" to="HSplitContainer/Canvas" method="_change_selected_node_type"]
[connection signal="value_changed" from="HSplitContainer/Canvas/SelectionInfo/Info/Node/Actions/InitialValue" to="HSplitContainer/Canvas" method="_change_selected_node_value"]
[connection signal="toggled" from="HSplitContainer/Canvas/SelectionInfo/Info/Node/Actions/ToggleEditable" to="HSplitContainer/Canvas" method="_change_selected_node_editable"]
[connection signal="pressed" from="HSplitContainer/Canvas/SelectionInfo/Info/Node/Actions/Duplicate" to="HSplitContainer/Canvas" method="_duplicate"]
[connection signal="pressed" from="HSplitContainer/Canvas/SelectionInfo/Info/Node/Actions/Delete" to="HSplitContainer/Canvas" method="_delete"]
[connection signal="pressed" from="HSplitContainer/Canvas/SelectionInfo/Info/Link/Actions/EditFormula" to="HSplitContainer/Canvas" method="_show_formula_editor"]
[connection signal="pressed" from="HSplitContainer/Canvas/SelectionInfo/Info/Link/Actions/Duplicate" to="HSplitContainer/Canvas" method="_duplicate"]
[connection signal="pressed" from="HSplitContainer/Canvas/SelectionInfo/Info/Link/Actions/Delete" to="HSplitContainer/Canvas" method="_delete"]
[connection signal="cancelled" from="HSplitContainer/Canvas/EditFormula" to="HSplitContainer/Canvas" method="_hide_formula_editor"]
[connection signal="confirmed" from="HSplitContainer/Canvas/EditFormula" to="HSplitContainer/Canvas" method="_confirm_formula_edit"]
